Switched to spring boot app properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=es
+
+guru.username=John
+guru.password=somepassword
+guru.dburl=some-url
+
+guru.jms.username=JMS Username
+guru.jms.password=Some password
+guru.jms.url=someURL
